src/less/main.less
@import (inline) "../../public/bower_components/css-preload/src/css-preload.css";

@import "../../public/bower_components/bootstrap/less/bootstrap";
@icon-font-path: "../bower_components/bootstrap/fonts/";

@import "../../public/bower_components/font-awesome/less/font-awesome.less";
@fa-font-path: "../bower_components/font-awesome/fonts/";

@import (less) "../../public/bower_components/animate.css/animate.css";

@import "_variables";
@import "_mixins";
@import "_navbar-transparent";


html {
  // min-height: 100%;
  // height: 100%;
}

body {
  // min-height: 2000px;
  height: 100%;
  // background-color: lighten( desaturate( @andrz-bg-color-overlay, 60%), 20% );
  // background-color: @andrz-bg-color;
  // background-color: gray;
}

.andrz-bg-image {
  // .andrz-bg-fixed;
  .andrz-bg-absolute;

  background-position: center top;
  background-size: cover;
  // fish
  // background-image: url("https://unsplash.imgix.net/photo-1418226970361-9f1f7227d638?q=75&w=1080&h=1080&fit=max&fm=jpg&s=7a3e301155d0e1a78e5c1f03420b384e");
  // shore cliff bird's eye
  // background-image: url("https://unsplash.imgix.net/photo-1417444900330-dc44c79af021?q=75&fm=jpg&s=691e51ea2e210a16c23294a029752141");
  // splash shore
  background-image: url("https://ununsplash.imgix.net/photo-1413913619092-816734eed3a7?q=75&fm=jpg&s=7653dd05ea22b7546a416b360b9d3bdd");
  // pebbles
  // background-image: url("https://ununsplash.imgix.net/uploads/141202616623001715bb7/c1b3b9b0?q=75&fm=jpg&s=07faf9fb6409579bda59881970b284d1");
  animation: andrz-bg-image 5s;
}

.andrz-bg-overlay {
  // .andrz-bg-fixed;
  .andrz-bg-absolute;

  background-color: @andrz-bg-color-overlay;
  opacity: 0.6;
  animation: andrz-bg-overlay 5s;
}

@keyframes andrz-bg-overlay {
  0%   { opacity: 1; }
  100% { opacity: 0.6; }
}
@keyframes andrz-bg-image {
  0%   { -webkit-filter: blur(10px); }
  100% { -webkit-filter: blur(0px); }
}

.navbar-brand {
  // text-transform: uppercase;
}

.andrz-nav-control {
  .andrz-button-unstyled;

  text-shadow: 0 0 1px black;

  &, &:link, &:visited, &:hover, &:active {
    text-decoration: none;
  }
  &, &:link, &:visited {
    color: white;
  }
  &:hover, &:active {
    color: gray;
  }

  display: block;
  top: 0;
  padding-top: @andrz-nav-toggle-pad;

  .andrz-nav-root.andrz-uses-nav-left & {
    left: 0;
    padding-left: @andrz-nav-toggle-pad;
    padding-right: 0;
  }
  .andrz-nav-root.andrz-uses-nav-right & {
    right: 0;
    padding-right: @andrz-nav-toggle-pad;
    padding-left: 0;
  }

  // weird flickering
  //&:hover {
  //   .animated;
  //   .flipInX;
  //   // .bounceIn;
  //}
}

.andrz-nav-toggle {
  position: fixed;
  z-index: @andrz-nav-toggle-z-index;

}

.andrz-nav-control-icon {
  font-size: 24px;
  line-height: 24px;
  height: 24px;
  width: 24px;
}

.andrz-nav-toggle-text {
  font-size: 16px;
  line-height: 24px;
  height: 24px;
}

.andrz-nav-toggle-opened {
  display: none;

  .animated;
  .rotateOut;

  .andrz-nav-root.andrz-nav-opened & {
    .rotateIn;
  }
}

.andrz-nav-toggle-closed {
  display: block;

  .animated;
  .rotateIn;

  .andrz-nav-root.andrz-nav-opened & {
    .rotateOut;
  }
}

.andrz-nav-root.andrz-nav-opened {
  .andrz-nav-toggle-opened {
    display: block;
  }
  .andrz-nav-toggle-closed {
    display: none;
  }
}


.andrz-nav-root.andrz-uses-nav {
  height: 100%;
  body {
    overflow-x: hidden;
  }
}

.andrz-nav-anim {
  height: 100%;
  min-height: 100%;
  position: relative;

  .andrz-nav-root.andrz-uses-nav-page-shift & {
    left: 0;
    transition: left 0.5s;
  }

  .andrz-nav-root.andrz-uses-nav-page-shift.andrz-uses-nav-right.andrz-nav-opened & {
    left: -1 * @andrz-nav-width;
  }
  .andrz-nav-root.andrz-uses-nav-page-shift.andrz-uses-nav-left.andrz-nav-opened & {
    left: @andrz-nav-width;
  }
}

.andrz-nonnav {
  height: 100%;
}

.andrz-nav {
  position: fixed;
  top: 0;
  bottom: 0;
  z-index: @andrz-nav-z-index;

  padding: (40px + 16px) 0;
  width: @andrz-nav-width;

  transition: left 0.5s, right 0.5s;

  .andrz-nav-root.andrz-uses-nav-left & {
    left: -1 * @andrz-nav-width;
  }
  .andrz-nav-root.andrz-uses-nav-left.andrz-nav-opened & {
    left: 0;
  }
  .andrz-nav-root.andrz-uses-nav-right & {
    right: -1 * @andrz-nav-width;
  }
  .andrz-nav-root.andrz-uses-nav-right.andrz-nav-opened & {
    right: 0;
  }
}

.andrz-nav--glass {
  background: fade(@andrz-bg-color-overlay, 50%);
}

.andrz-nav--dark {
  background: #222;
}

.andrz-nav-list-item {
}

.andrz-nav-link {
  display: block;
  padding: 8px 16px;

  &, &:link, &:visited, &:hover, &:active {
    color: white;
    text-decoration: none;
  }

  &:hover {
    .andrz-nav-link-icon {
      .animated;
      .flipInX;
      // .bounceIn;
    }
  }

  .andrz-nav--invisible & {
    .andrz-nav-root.andrz-uses-nav-right & {
      text-align: right;
    }
    .andrz-nav-root.andrz-uses-nav-left & {
      text-align: left;
    }
  }

  .andrz-nav--glass & {
    &:hover, &:active {
      background: rgba(0,0,0,0.2);
    }
  }

  .andrz-nav--dark & {
    &:hover, &:active {
      background: rgba(0,0,0,0.2);
    }
  }
}

.andrz-nav-link-icon {
  font-size: 24px;
  line-height: 24px;
  height: 24px;
  width: 24px;
}

.andrz-nav-link-text {
  font-size: 16px;
  line-height: 24px;
  height: 24px;
  width: 24px;
  margin: 0 8px;
}


.andrz-masthead {
  position: relative; // for image fill

  padding-top: 100px;
  padding-bottom: 24px;
  // position: relative;
  // z-index: 1;
  text-align: center;
  color: white;

  .andrz-nav-root.andrz-page-home & {
    height: 100%;
  }
}

.andrz-masthead-center {
  position: relative;
  margin: auto;
  width: 400px;
  max-width: 100%;

  text-shadow: 0 0 4px rgba(0,0,0,0.8);

  &:hover {
    .animated;
    // .tada;
    // .flipInX;
    // .bounceIn;
    // .rubberBand;
    // .swing;
    // .shake;
    // .bounce;
    .pulse;
  }
}

.andrz-masthead-image {
  position: relative;
}

.andrz-masthead-logo {
  display: block;
  width: 100%;
}

// .andrz-masthead-image-shadow {
//   box-shadow: 0 0 175px 175px rgba(0,0,0,0.5);
//   width: 1%;
//   // max-width: 100%;
//   background: rgba(0,0,0,0.5);
//   height: 1%;
//   position: absolute;
//   top: 60%;
//   left: 50%;
//   z-index: -1;
//   border-radius: 50%;
// }

// .andrz-masthead-image-shadow {
//   .andrz-bg-fill;
//   background: radial-gradient(rgba(0,0,0,0.8), transparent 67%);
// }

.andrz-masthead-heading {
}


.andrz-lead {
  text-align: center;
}


.andrz-container-main {
  height: 100%;
}


.andrz-page-body {
  background: @body-bg;
  color: @text-color;
}

